<resources>
    <string name="app_name">PSMobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_user_failed_not_team">ผู้ใช้งานไม่ได้อยู่ในทีม</string>
    <string name="login_user_no_device_id">ไม่มีข้อมูลของอุปกรณ์เครื่องนี้</string>
    <string name="login_no_user_in_team">ทีมนี้ยังไม่เคยกำหนดสมาชิกระดับหัวหน้าในทีม</string>
    <string name="login_user_not_exist">ยูเซอร์หรือรหัสผิดพลาด</string>
    <string name="dialog_team_title_name">เข้าสู่ระบบ</string>
    <string name="dialog_team_label_uername">รหัสทีม</string>
    <string name="dialog_team_label_password">รหัสผ่าน</string>
    <string name="dialog_team_label_device_id">Device ID</string>
    <string name="dialog_team_text_current_date">ประจำวันที่ %1$s</string>
    <string name="dialog_team_text_current_time">เวลา %1$s</string>
    <string name="message_box_title_error">ข้อผิดพลาด</string>
     <string name="camera">Camera</string>
    <string name="toggle_titles">Toggle Titles</string>
    <string name="day_night">Day/Night</string>
    <string name="show_dialog">Show a dialog</string>
    <string name="basic_notification">Show a basic notification</string>
    <string name="custom_notification">Show a custom notification</string>
    <string name="switch_camera">Switch camera</string>
    <string-array name="main_menu_text_array">
        <item>หน้าหลัก</item>
        <item>แผนงาน</item>
        <item>งาน</item>
        <item>ค่าใช้จ่าย</item>
        <item>ข่าว</item>
        <item>รายงาน</item>
    </string-array>
    <string-array name="menu_group_sort_array">
        <item>แสดงกำหนดการทั้งหมด</item>
        <item>แสดงตามกำหนดเวลา</item>
        <item>แสดงตามการตรวจ</item>
    </string-array>
    <string-array name="sub_menu_group_task_sort_by_plan_job_status">
        <item>รอยืนยัน</item>
        <item>ยืนยันแล้ว</item>
        <item>เลื่อน</item>
        <item>ยกเลิก</item>
    </string-array>
    <string-array name="sub_menu_group_task_sort_by_task_status">
        <item>เสร็จสิ้น</item>
        <item>จัดเก็บ</item>
        <item>ยืนยัน</item>
        <item>แก้ไข</item>
    </string-array>
    <string-array name="sub_menu_group_task_sort_by_dashboard">
        <item>รอยืนยัน</item>
        <item>ยืนยันแล้ว</item>
        <item>เลื่อน</item>
        <item>ยกเลิก</item>
        <item>เสร็จสิ้น</item>
        <item>จัดเก็บ</item>
        <item>ยืนยัน</item>        
        <item>แก้ไข</item>
    </string-array>
    <string-array name="sub_menu_group_sort_array_2">
        <item>วันนี้</item>
        <item>อาทิตย์หน้า</item>
        <item>เลือกระบุวัน</item>
    </string-array>
        <string-array name="sub_menu_group_sort_array_3">
        <item>Package</item>
        <item>Cluster</item>
        <item>Adhoc</item>
    </string-array>
    <string name="txt_today">วันนี้</string>
    <string name="txt_customer_survey_site_amount">สถานที่ : %1$s</string>
    <string name="txt_customer_survey_site_inspect_type">ประเภท : %1$s</string>
    <string name="txt_customer_survey_site_remain_date">ครบกำหนด : %1$s วัน</string>
    <string name="txt_customer_survey_site_task_code_and_amount">เลขที่งาน : %1$s สถานที่ : %2$s</string>
    <string name="txt_task_code">เลขที่งาน : %1$s</string>
    <string-array name="txt_plan_job_context_menus">
        <item>ดูรายละเอียดงาน</item>
        <item>ยืนยันงาน</item>
        <item>เลื่อนงาน</item>
        <item>ยกเลิกงาน</item>
    </string-array>
    <string name="txt_context_menu_plan_job_detail">ดูรายละเอียดงาน</string>
	<string name="txt_context_menu_plan_job_confirm">ยืนยันงาน</string>
    <string name="txt_context_menu_plan_job_shift">เลื่อนงาน</string>
	<string name="txt_context_menu_plan_job_cancel">ยกเลิกงาน</string>
    <string name="txt_context_menu_do_task_start">ดูงาน</string>
    <string name="txt_context_menu_do_task_split">แยกงาน</string>
    <string name="txt_context_menu_do_task_finish">สิ้นสุดงาน</string>
    <string name="txt_context_menu_do_finish_task_report">รายงานการตรวจ</string>
    <string name="txt_context_menu_do_task_inspect">การเข้าตรวจ</string>
    <string name="txt_context_menu_do_task_delete_duplicated">ลบงานแยก</string>
    <string name="txt_context_menu_do_task_delete_duplicated_confirm">คุณต้องการลบงานแยกนี้จริงหรือไม่?</string>
    <string name="txt_context_menu_do_task_change">แก้ไขการตรวจ</string>
    <string name="text_titles_of_job_detail_detail">รายละเอียดงาน</string>
    <string name="text_titles_of_job_detail_product">รายละเอียดสินค้า</string>
    <string name="text_titles_of_job_detail_warehouse">สถานที่เก็บสินค้า</string>
    <string name="text_titles_header_customer_detail">รายละเอียดลูกค้า</string>
    <string name="text_titles_header_subject">วัตถุประสงค์</string>
    <string name="text_title_header_type_of_inspect">ประเภทการใช้บริการ</string>
    <string name="text_tel_prefix">โทร : </string>
    <string name="text_inspect_type_prefix">ประเภท : </string>
    <string name="text_customer_code_prefix">เลขที่ </string>
    <string name="text_customer_business_type">ประเภทกิจการ %1$s</string>
    <string name="text_customer_schedule_preiod_inspect">วันที่ต้องการตรวจนับ %1$s</string>
    <string name="text_customer_product_item_format">%1$d, %2$s %3$s %4$s</string>
    <string name="text_customer_warehouse_details_format">%1$d, %2$s\n%3$s\nผู้นำตรวจ : %4$s</string>
    <string name="text_job_request_notes">บันทึกเพิ่มเติมจากส่วนกลาง</string>
    <string-array 
    		name="array_header_name_of_group_job_inspect"     
        >
		<item>งาน</item>        
		<item>สถานที่</item>
		<item>ความคิดเห็น</item>
		<item>ข้อสังเกตุ</item>
		<item>รายงานการตรวจ</item>
    </string-array>
    <string-array name="array_list_of_inspect_item">
		<item>รายละเอียดงาน</item>        
		<item>แผนผัง</item>
		<item>ผลการตรวจครั้งล่าสุด</item>
    </string-array>
	<string-array name="array_list_of_news">
	    <item>ข่าวทั้งหมด</item>
	    <item>เฉพาะวันนี้</item>
	    <item>ย้อนหลังไป 7 วัน</item>
	    <item>ย้อนหลังไป 15 วัน</item>
	</string-array>
    <string-array name="array_list_of_reports">
        <item>เลือกรายงาน</item>
    </string-array>
    <string name="text_tools_box">เครื่องมือ</string>
	<string-array name="tools_box_group_name">
	    <item>แผนผัง</item>
	    <item>สิ่งปลูกสร้าง</item>
	    <item>ชนิดสินค้า</item>
	    <item>ถ่ายภาพ</item>
	</string-array>
	<string name="label_inspect_data_entry_group_size">ขนาด</string>
	<string name="label_inspect_data_entry_product_group">ประเภทสินค้า</string>
	<string name="label_inspect_data_entry_product">ชนิดสินค้า</string>
	<string name="label_inspect_data_entry_width">กว้าง</string>
	<string name="label_inspect_data_entry_long">ยาว</string>
	<string name="label_inspect_data_entry_heigh">สูง</string>
	<string name="label_inspect_data_entry_radius">รัศมี</string>
	<string name="label_inspect_data_entry_product_lost">ขาด</string>
	<string name="label_inspect_data_entry_product_over">เกิน</string>
	<string name="label_inspect_data_entry_total_amount">รวม</string>
	<string name="label_inspect_data_entry_value">มูลค่า</string>
	<string name="label_inspect_data_entry_comment">ข้อสังเกตุ</string>
	<string name="label_inspect_data_entry_obj_name">Layout name</string>
	<string name="label_inspect_data_entry_product_type">ประเภทสินค้า</string>
	<string name="label_inspect_data_entry_density">หนาแน่น</string>
	<string name="label_inspect_data_entry_amount_unit">หน่วยนับ</string>
	<string name="label_inspect_data_entry_formula">สูตร</string>
	<string name="label_inspect_data_entry_additional">เพิ่ม</string>
	<string name="label_inspect_data_entry_btn_save">ตกลง</string>
	<string name="label_inspect_data_entry_btn_cancel">ยกเลิก</string>
	<string name="label_inspect_data_entry_product_controlled">สินค้าควบคุมพิเศษ</string>
	<string name="label_inspect_data_entry_palate_amount">จำนวนลูก/พาเลท</string>
	<string name="label_inspect_data_entry_area">พื้นที่ (ตรม.)</string>
	<string name="label_inspect_data_camera_view_choose">เลือกภาพ</string>
	<string name="label_inspect_data_camera_view_choose_album">จากอัลบัม</string>
	<string name="label_inspect_data_camera_view_take_photo">ถ่ายรูป</string>
	<string name="question_number">คำถามที่ %1$s</string>
    <string name="on_current_at_question_number">%1$s / %2$s</string>
    <string name="label_text_answer">ข้อความ</string>
    <string name="label_text_choice">ตัวเลือก</string>
    <string name="label_text_tools_record">เครื่องมือบันทึก</string>
    <string name="label_time_attendance_team_detail">รายละเอียดทีม</string>
    <string name="label_time_attendance_team_members">ลูกทีม</string>
    <string name="label_time_attendance_team_photo">รูปถ่าย</string>
    <string name="label_time_attendance_team_car_mile">เลขไมล์</string>
    <string name="label_time_attendance_team_car_register_no">ทะเบียนรถ</string>
    <string name="label_inspect_emp_role_leader">หัวหน้าทีม</string>
    <string name="label_inspect_emp_role">ลูกทีม</string>
    <string name="label_context_menu_delete_team_member">ลบสมาชิก</string>
    <string name="label_simple_dlg_title_end_of_inspect">สิ้นสุดการตรวจ</string>
    <string name="label_simple_dlg_btn_end_of_inspect_ok">สิ้นสุดการตรวจ</string>
    <string name="label_simple_dlg_btn_cancel">ยกเลิก</string>
    <string name="label_simple_dlg_title_log_out">ออกงาน</string>
    <string name="label_simple_dlg_log_out_ok">ออกงาน</string>
    <string name="label_logout_message">ระบบจะบันทึกเวลาออกงาน</string>
    <string name="label_simple_dlg_title_print_report">รายงานการตรวจ</string>
    <string name="label_simple_dlg_btn_print_report_ok">พิพม์รายงาน</string>
    <string name="label_postpone_dlg_title">เลื่อนงาน</string>
    <string name="label_date">วันที่</string>
    <string name="label_time">เวลา</string>
    <string name="label_postpone_cause">สาเหตุการเลื่อน</string>
    <string name="label_btn_postpone">เลื่อนงาน</string>
    <string name="label_confirm_dlg_title">ยืนยันงาน</string>
    <string name="label_btn_confirm">ยืนยันงาน</string>
    <string name="label_cancel_dlg_title">ยกเลิกงาน</string>
    <string name="label_cancel_cause">สาเหตุการยกเลิกงาน</string>
    <string name="label_btn_cancel">ยกเลิกงาน</string>
    <string name="label_save_title">บันทึก</string>
    <string name="label_save_complete">บันทึกสำเร็จ</string>
    <string name="label_btn_ok">ตกลง</string>
    <string name="label_title_report_inspect">รายงานผลการตรวจของ </string>
    <string name="label_inspect">การเข้าตรวจ</string>
    <string name="label_task">ภาระกิจ</string>
    <string name="label_expense_group_fuel_name">ค่าเชื้อเพลิง</string>
    <string name="label_expense_group_other_name">ค่าอื่นๆ</string>
    <string-array name="label_columns_expense_fuel">
        <item>วันที่ที่เติม</item>      
        <item>เวลาที่เติม</item>
        <item>เลขไมล์</item>
        <item>ประเภทน้ำมัน/ชำระ</item>
        <item>จำนวน</item>
        <item>ลิตร</item>
        <item>หมายเหตุ</item>
    </string-array>
    <string-array name="label_columns_expense_other">
		<item>วันที่</item>        
		<item>เวลา</item>
		<item>ประเภทค่าใช้จ่าย</item>
		<item>จำนวนเงิน</item>
		<item>หมายเหตุ</item>
    </string-array>
    <string name="label_context_menu_expense_edit">แก้ไข</string>
    <string name="label_context_menu_expense_del">ลบ</string>
    <string name="label_expense_text">ค่าใช้จ่าย</string>
    <string name="label_expense_status_text_finish">เสร็จสิ้น</string>
    <string name="label_expense_status_text_stored">จัดเก็บ</string>
    <string name="market_price_label">ราคากลาง</string>
	<string name="text_report_filter_dlg_date">ประจำวันที่</string>
	<string name="text_report_filter_dlg_team_name">ทีมตรวจ</string>
	<string name="text_report_filter_dlg_inspect_type">ประเภทการตรวจ</string>
	<string name="text_report_filter_dlg_report_btn_ok">ออกรายงาน</string>
    <string name="text_hit_location">เพิ่มสถานที่ใหม่ตรงนี้</string>
</resources>