<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/label_inspect_data_camera_view_choose"
        />
	<View style="@style/Divider"
	    />
	
	 <Button 
	       android:id="@+id/btn_choose_pic_from_album"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/label_inspect_data_camera_view_choose_album"
	     />
	 <Button 
	       android:id="@+id/btn_take_photo"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/label_inspect_data_camera_view_take_photo"
	       android:layout_marginTop="10dp"
	     />
<GridView
        android:id="@+id/gv_picture_preview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:columnWidth="100dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center" 
 />
</LinearLayout>
