<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
     >
    
<LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingRight="5dp"
        >

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_report_filter_dlg_date"
        />
    
    
	<EditText 
	      android:id="@+id/et_report_filter_dlg_start_date"
	      android:layout_width="150dp"
	      android:layout_height="wrap_content"
	      android:singleLine="true"
	   />

	<EditText 
	      android:id="@+id/et_report_filter_dlg_end_date"
	      android:layout_width="150dp"
	      android:layout_height="wrap_content"
	      android:singleLine="true"
	      android:layout_marginLeft="10dp"
	    />   
	
</LinearLayout>
<LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp"
      android:paddingRight="5dp"
    >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_report_filter_dlg_team_name"
	    />    
	 <EditText 
	       android:id="@+id/et_report_filter_dlg_team_name"
	       android:layout_width="200dp"
		   android:layout_height="wrap_content"
		   android:enabled="false"
	     >
	       <requestFocus />
	     </EditText>
</LinearLayout>
<LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp"
      android:paddingRight="5dp"
    >
    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_report_filter_dlg_inspect_type"
	    />  
	<com.epro.psmobile.view.InspectTypeSpinner
	     android:id="@+id/spn_report_filter_dlg_inspect_type"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	    />
</LinearLayout>
<View style="@style/Divider"
      android:layout_marginTop="20dp"
	    />
<LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp"
      android:layout_gravity="center"
      android:gravity="center"
    >
	<Button 
	      android:id="@+id/btn_report_filter_dlg_ok"	   
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/text_report_filter_dlg_report_btn_ok"
	    />	
	<Button 
	      android:id="@+id/btn_report_filter_dlg_cancel"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
		  android:text="@string/label_inspect_data_entry_btn_cancel"	      
	    />
</LinearLayout>
</LinearLayout>
